--- a/EFI_V2_10.14.6_10.15.3_iMacPro/OC/Config.plist
+++ b/EFI_V2_10.14.6_10.15.3_iMacPro/OC/Config.plist
@@ -155,7 +155,7 @@
 				<key>Comment</key>
 				<string>Drop AmdTable</string>
 				<key>Enabled</key>
-				<true/>
+				<false/>
 				<key>OemTableId</key>
 				<data>QW1kVGFibGU=</data>
 				<key>TableLength</key>
@@ -535,7 +535,7 @@
 				<key>PlistPath</key>
 				<string>Contents/Info.plist</string>
 				<key>Enabled</key>
-				<true/>
+				<false/>
 				<key>MinKernel</key>
 				<string></string>
 				<key>ExecutablePath</key>
@@ -558,6 +558,22 @@
 				<string></string>
 				<key>BundlePath</key>
 				<string>USBPorts-X570-Gb-AorusXtreme-PCIe_BT.kext</string>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string></string>
+				<key>MaxKernel</key>
+				<string></string>
+				<key>PlistPath</key>
+				<string>Contents/Info.plist</string>
+				<key>Enabled</key>
+				<true/>
+				<key>MinKernel</key>
+				<string></string>
+				<key>ExecutablePath</key>
+				<string>Contents/MacOS/AMDRyzenCPUPowerManagement</string>
+				<key>BundlePath</key>
+				<string>AMDRyzenCPUPowerManagement.kext</string>
 			</dict>
 		</array>
 		<key>Block</key>
@@ -707,7 +723,7 @@
 				<key>Count</key>
 				<integer>1</integer>
 				<key>Enabled</key>
-				<true/>
+				<false/>
 				<key>Find</key>
 				<data>McAx2zHJMdIPokGJxkGJ0QAAAAAAAAA=</data>
 				<key>Identifier</key>
@@ -1295,7 +1311,7 @@
 				<key>Count</key>
 				<integer>1</integer>
 				<key>Enabled</key>
-				<true/>
+				<false/>
 				<key>Find</key>
 				<data>gfm8T+p4D4TFAQAA</data>
 				<key>Identifier</key>
