New Thunderbolt SSDT (renamed V2)
Took a fresh start on thunderbolt SSDT with another source SSDT (DSM2's DSDT for MacPro5,1).
• Added device UPSB
• Renamed XHC2 to XHC3
...still no shutdown.

--- a/EFI_V3_10.15.4_MacPro7,1/OC/Config.plist
+++ b/EFI_V3_10.15.4_MacPro7,1/OC/Config.plist
@@ -56,11 +56,11 @@
 			</dict>
 			<dict>
 				<key>Comment</key>
-				<string>SSDT-X570-TB3-TTR.aml</string>
+				<string>SSDT-X570-TB3-TTR_V2.aml</string>
 				<key>Enabled</key>
 				<true/>
 				<key>Path</key>
-				<string>SSDT-X570-TB3-TTR.aml</string>
+				<string>SSDT-X570-TB3-TTR_V2.aml</string>
 			</dict>
 			<dict>
 				<key>Comment</key>
